# FRAME

./: .gitignore  CLAUDE.md  README.md  _vizdoom.ini  main.py  pyproject.toml
configs/: csgo_predictor.yaml  csgo_tokenizer.yaml  vizdoom_deathmatch_predictor.yaml  vizdoom_deathmatch_tokenizer.yaml  vizdoom_maze_predictor.yaml  vizdoom_maze_tokenizer.yaml  vizdoom_predictor.yaml  vizdoom_tokenizer.yaml
data/csgo/: dataset.py  loader.py
data/hf_deathmatch/: loader.py
data/vizdoom/: collect.py  dataset.py
docs/: BEST_PRACTICES.md  HANDOFF-12-04-1026.md  PLAN.md  RESEARCH_NOTEBOOK.md
docs/architecture/: FRAME_ARCHITECTURE_v1.1.md  FRAME_architecture_v1.1.docx
docs/hf/: dataset_README.md  tokenizer_README.md
eval/: action_sensitivity.py  fid.py  inverse_acc.py  lpips.py  rollout.py
inference/: display.py  keyboard.py  loop.py  stub.py
predictor/: film.py  gru_state.py  inverse_dynamics.py  sampling.py  scene_state.py  train.py  transformer.py
scripts/: run_demo.sh  train_predictor.sh  train_tokenizer.sh
tokenizer/: decoder.py  discriminator.py  encoder.py  loss.py  train.py  vq.py
